# thekedar

./: .env.example  .gitignore  .thekedar_run_marker  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  project.md  pyproject.toml
.cursor/rules/: avoid-mistakes.mdc  systems-thinking.mdc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-prod.yml  deploy-staging.yml
config/: bifrost.yaml  mcp-servers.dev.yaml  mcp-servers.yaml  workspace.example.yaml  workspace.yaml
config/bifrost/: config.json  github-mcp-client.json
docs/: CODING_PIPELINE.md  CONTEXT_HARNESS.md  GA_CHECKLIST.md  GETTING_STARTED.md  IDE_SETUP.md  RELIABILITY.md  THREAT_MODEL.md  architecture.md  demo-mode.md  deployment.md  workspace-config.md
docs/adr/: 0001-cloud-only-product-boundary.md  0002-antigravity-sdk-as-primary-gcp-runtime.md  0003-remote-adapter-executor.md  0004-mid-run-tool-approvals.md  0005-three-layer-repo-understanding.md  0006-tenant-github-pat.md
docs/integrations/: github.md  jira.md  slack.md  whatsapp.md
docs/runbooks/: orchestrator-worker-stuck.md  webhook-ingress-down.md  workstation-hibernation.md
extensions/vscode-thekedar/: README.md  package.json
infra/docker/: dashboard-hub.Dockerfile  github-mcp.Dockerfile  orchestrator.Dockerfile  webhook-ingress.Dockerfile
infra/workstation/: bootstrap.sh
scripts/: bootstrap.sh  dr-drill.sh  load_test_webhooks.py  send-demo-message.sh  tunnel.sh  wait-for-services.sh
tests/: conftest.py  test_thekedar_feature_1.py
tests/chaos/: test_staging_gate.py
tests/e2e/: test_workflow.py
tests/eval/: approval_confusion.jsonl  context_retrieval_golden.jsonl  impact_injection_adversarial.jsonl  test_context_eval.py  test_eval_suites.py
tests/unit/: test_approval_commands.py  test_approvals.py  test_chaos.py  test_checkpoint.py  test_cloud_executor.py  test_coder_pipeline.py  test_context.py  test_dashboard_auth.py  test_dashboard_widgets.py  test_execution_router.py  test_fail_closed.py  test_health.py  (+27 more)
(+21 files in other folders)
