[project]
name = "thekedar"
version = "0.1.0"
description = "Headless MCP Orchestrator for WhatsApp, Slack, Jira, and GitHub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
workspace = { members = [
    "packages/shared",
    "packages/webhook-ingress",
    "packages/mcp-policy",
    "packages/cli",
    "packages/message-adapter",
    "packages/orchestrator",
    "packages/dashboard-hub",
] }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
    "pip-audit>=2.7",
    "bandit>=1.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [
    "packages/shared/src",
    "packages/webhook-ingress/src",
    "packages/mcp-policy/src",
    "packages/cli/src",
    "packages/message-adapter/src",
    "packages/orchestrator/src",
    "packages/dashboard-hub/src",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["thekedar_shared", "thekedar_webhook_ingress", "thekedar_mcp_policy", "thekedar_cli"]
